@@ -1,3 +1,8 @@
+2007-09-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (theme_store_sort_func): make theme sorting
+	case-insensitive (bug #481224)
+
 2007-09-23  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-wp-item.c: (gnome_wp_item_free), (gnome_wp_item_dup):
